Fix word-wrapping on tooltips

--- a/app/stylesheets/_tooltip.sass
+++ b/app/stylesheets/_tooltip.sass
@@ -2,6 +2,7 @@
   .tooltip
     +follow-button
     font-family: Arial,"Liberation Sans","DejaVu Sans",sans-serif
+    word-wrap: break-word
     font-size: 13px
     line-height: 15px
 
